css/town.css
#timeline-padding {
    height: 60px;
    margin-left: 50%;
    border-left: 1px solid black;
}

#loading-spinner {
    margin-right: 15px;
    /* text-top seems to center the spinner the best.*/
    vertical-align: text-top;
}

.navbar-default {
    background: rgb(240,240,240);
    border: none;
}

.navbar-timeline {
    position: absolute;
    width: 100%;
    left: 0;
    padding: 2px 12em;
    margin: auto;
    overflow: hidden;
    height: 50px;
}

#navbar-year-container, #navbar-month-container, #navbar-loading-contaner {
    position: absolute;
    height: 20px;
    left: 12em;
    right: 12em;
    border: 0;
}

#navbar-year-container, #navbar-month-container {
    margin-right: auto;
    margin-left: auto;
    text-align: center;
    text-overflow-mode: clip;
    white-space: nowrap;
}

#navbar-year-container {
    top: 2px;
    overflow-x: hidden;
    padding: 0px 40px;
}
#navbar-year-container .navbar-year {
    display: inline;
    margin: 0 .7em;
    cursor: pointer;
}
#navbar-year-container .navbar-year.navbar-year-current {
    font-weight: bold;
}

#navbar-year-overlay-left, #navbar-year-overlay-right {
    height: 20px;
    width: 40px;
    position: absolute;
    top: 0px; 
    z-index: 3000; /* Be above the rest.*/
}
#navbar-year-overlay-left {
    background-color: rgba(255, 0, 255, 1);
    left: 12em;
    background: linear-gradient(to right, rgb(240,240,240), rgba(240,240,240,0.7), rgba(240,240,240,0));
}
#navbar-year-overlay-right {
    background-color: rgba(0, 255, 0, 0.2);
    right: 12em;
    background: linear-gradient(to left, rgb(240,240,240), rgba(240,240,240,0.7), rgba(240,240,240,0));
}

#navbar-loading-contaner {
    border: 0;
    height: 1px;
    top: 22px;
    background-color: #ccc;
}
#navbar-loading-contaner #navbar-loading-contaner-fill {
    left: 0;
    top: 0;
    width: 0px;
    border: 0;
    height: 1px;
    background-color: black;
}

#navbar-month-container {
    top: 23px;
}

.navbar-timeline #navbar-month-container {
    border: 0;
}

.navbar-timeline .navbar-month {
    display: inline;
    padding: 0 .7em;
    text-decoration: none;
    color: black;
    cursor: pointer;
}
.navbar-timeline .navbar-month.navbar-month-current {
    font-weight: bold;
}
.navbar-timeline .navbar-month.navbar-month-missing {
    color: #ccc;
}
.navbar-timeline .navbar-month:hover {
    color: #999;
}

#timeline .month-heading {
    box-sizing: border-box;
    margin-left: 50%;
    border-left: 1px solid black;
    padding-left: 10px;
    font-weight: bold;
    font-size: 200%;
    display: block;
    clear: both;
}

#timeline .content {
    display: table;
    width: 100%;
}

#timeline .content .right-content, #timeline .content .left-content {
    padding-left: 10px;
    padding-right: 10px;
    box-sizing: border-box;
    width: 50%;
    max-width: 50%;
    height: 100%;
    display: table-cell;
    vertical-align: top;
}

#timeline .content .left-content {
    clear: left;
}

#timeline .content .right-content {
    border-left: 1px solid black;
    clear: right;
}

#timeline .date-heading {
    padding-top: 1px;
    margin-left: 50%;
    border-left: 1px solid black;
}

.trove-content {
    padding: 10px;
    margin: 10px 0px;
    box-sizing: border-box;
    border: 1px solid black;
    display: table;
    table-layout: fixed;
    width: 100%;
}

.trove-content-row {
    position: relative;
}
#timeline .preview-hidden {
    display: none;
}
.heading-wrapper {
    width: 100%;
    padding-right: 7em;
    display: inline-block;
}
.heading {
    font-size: 140%;
    font-weight: bold;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}
.date {
    position: absolute;
    float: right;
    color: #666;
    white-space: nowrap;
    text-align: right;
    width: 7em;
    right: 0;
    top: 0;
}
.link {
    width: 7em;
    right: 0;
    top: 1.5em;
    position: absolute;
    float: right;
    color: #666;
    white-space: nowrap;
    text-align: right;
}
.body {
    overflow: hidden;
    max-height: 10em;
}

.trove-image .body {
    max-height: none;
}
.trove-image .body img.thumbnail {
    max-width: 100%;
    padding: 0;
    margin: 0 auto;
    border: 0;
}

/* Lightbox */
#lightboxContent {
    position: fixed;
    z-index: 9999;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(150, 150, 150, 0.5);
}

#box {
    border: 1px solid black;
    width: 80%;
    height: 80%;
    margin: 0 auto;
    background-color: white;
    overflow: auto;
    margin-top: 50px;
    padding: 10px;
}
#box .body {
}

#box .trove-content-row {
    margin-top: 3px;
    margin-bottom: 3px;
}

#box .heading {
    font-size: 200%;
    font-weight: 200;
}

#box .trove-content-body {
    border-top: 1px solid black;
}

